crates/toml/tests/snapshots/invalid/inline-table/linebreak-04.stderr
TOML parse error at line 1, column 14
  |
1 | json_like = {
  |              ^
newlines are unsupported in inline tables, expected nothing

---
TOML parse error at line 2, column 25
  |
2 |           first = "Tom",
  |                         ^
newlines are unsupported in inline tables, expected nothing

---
TOML parse error at line 3, column 34
  |
3 |           last = "Preston-Werner"
  |                                  ^
newlines are unsupported in inline tables, expected nothing
